# rust-web-app

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
