[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp rust-web-app."
homepage="https://awesomeapp.dev"
repository = "https://github.com/awesomeapp-dev/rust-web-app"


[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Data
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.27.1"
tower = "0.4.13"
http = "1.3.1"
log = "0.4.27"
derive_more = { version = "2.0.1", features = ["full"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3.2.0"